upgraded astro to v3 - refactored

--- a/src/components/Forms/Login.astro
+++ b/src/components/Forms/Login.astro
@@ -13,7 +13,7 @@
             </h2><div class="py-3">
               <span class="w-full inline-flex relative mt-3 z-0"
                 ><button
-                  class="font-medium text-sm bg-white border border-slate-300 focus:border-indigo-500 focus:outline-none focus:ring-1 focus:ring-indigo-500 focus:z-10 hover:bg-slate-50 inline-flex items-center justify-center px-4 py-3 relative rounded-xl text-slate-700 w-full"
+                  class="font-medium text-sm bg-white h-12 border border-gray-300 focus:border-indigo-500 focus:outline-none focus:ring-1 focus:ring-indigo-500 focus:z-10 hover:bg-gray-50 inline-flex items-center justify-center px-4 py-3 relative rounded-xl text-gray-700 w-full"
                   type="button"
                   ><span>Register with</span>
                   <span class="ml-3"
@@ -39,9 +39,9 @@
                 <div
                   class="flex items-center absolute inset-0"
                   aria-hidden="true">
-                  <div class="w-full border-t border-slate-300"></div>
+                  <div class="w-full border-t border-gray-300"></div>
                 </div><div class="flex relative justify-center">
-                  <span class="text-sm bg-white px-2 text-slate-500"
+                  <span class="text-sm bg-white px-2 text-gray-500"
                     >Or continue with</span
                   >
                 </div>
@@ -57,13 +57,13 @@
                 >User name or email Adress</label
               >
               <input
-                class="w-full focus:outline-none border py-3 appearance-none bg-slate-50 block border-slate-200 focus:bg-white focus:border-accent-500 focus:ring-accent-500 placeholder-slate-400 px-3 rounded-xl sm:text-sm text-accent-500"
+                class="w-full focus:outline-none border py-3 appearance-none h-12 bg-gray-50 block border-gray-200 focus:bg-white focus:border-accent-500 focus:ring-accent-500 placeholder-gray-400 px-3 rounded-xl sm:text-sm text-accent-500"
                 placeholder="Type here..."
               />
             </div><div class="col-span-full">
               <label class="sr-only" name="company">Password</label>
               <input
-                class="w-full focus:outline-none border py-3 appearance-none bg-slate-50 block border-slate-200 focus:bg-white focus:border-accent-500 focus:ring-accent-500 placeholder-slate-400 px-3 rounded-xl sm:text-sm text-accent-500"
+                class="w-full focus:outline-none border py-3 appearance-none h-12 bg-gray-50 block border-gray-200 focus:bg-white focus:border-accent-500 focus:ring-accent-500 placeholder-gray-400 px-3 rounded-xl sm:text-sm text-accent-500"
                 placeholder="Type password here..."
                 type="password"
               />
@@ -87,7 +87,7 @@
               </div>
             </div><div class="col-span-full">
               <button
-                class="items-center justify-center rounded-xl focus-visible:outline-black focus:outline-none inline-flex bg-black border-2 border-black duration-200 focus-visible:ring-black hover:bg-transparent hover:border-black hover:text-black px-6 py-3 text-center text-white w-full"
+                class="items-center h-12 justify-center rounded-xl focus-visible:outline-black focus:outline-none inline-flex bg-black border-2 border-black duration-200 focus-visible:ring-black hover:bg-transparent hover:border-black hover:text-black px-6 py-3 text-center text-white w-full"
                 type="submit">Submit your request</button
               >
             </div><div>
