--- a/src/components/Forms/Signup.astro
+++ b/src/components/Forms/Signup.astro
@@ -13,7 +13,7 @@
             </h2><div class="py-3">
               <span class="w-full inline-flex relative mt-3 z-0"
                 ><button
-                  class="w-full focus:outline-none border py-3 bg-white border-slate-300 focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 focus:z-10 font-medium hover:bg-slate-50 inline-flex items-center justify-center px-4 relative rounded-xl text-slate-700 text-sm"
+                  class="w-full focus:outline-none h-12 border py-3 bg-white border-gray-300 focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 focus:z-10 font-medium hover:bg-gray-50 inline-flex items-center justify-center px-4 relative rounded-xl text-gray-700 text-sm"
                   type="button"
                   ><span>Sign up with</span>
                   <span class="ml-3"
@@ -39,9 +39,9 @@
                 <div
                   class="flex absolute inset-0 items-center"
                   aria-hidden="true">
-                  <div class="w-full border-t border-slate-300"></div>
+                  <div class="w-full border-t border-gray-300"></div>
                 </div><div class="flex relative justify-center">
-                  <span class="bg-white text-sm px-2 text-slate-500"
+                  <span class="bg-white text-sm px-2 text-gray-500"
                     >Or continue with</span
                   >
                 </div>
@@ -57,7 +57,7 @@
               <div class="w-full">
                 <label class="sr-only" for="first_name">First name</label>
                 <input
-                  class="w-full focus:outline-none border py-3 appearance-none bg-slate-50 block border-slate-200 focus:bg-white focus:border-accent-500 focus:ring-accent-500 placeholder-slate-400 px-3 rounded-xl sm:text-sm text-accent-500"
+                  class="w-full focus:outline-none border py-3 appearance-none h-12 bg-gray-50 block border-gray-200 focus:bg-white focus:border-accent-500 focus:ring-accent-500 placeholder-gray-400 px-3 rounded-xl sm:text-sm text-accent-500"
                   id="first_name"
                   name="first_name"
                   autocomplete="given-name"
@@ -65,7 +65,7 @@
                 />
               </div><div class="w-full">
                 <label class="sr-only" for="last_name">Last name</label><input
-                  class="w-full focus:outline-none border py-3 appearance-none bg-slate-50 block border-slate-200 focus:bg-white focus:border-accent-500 focus:ring-accent-500 placeholder-slate-400 px-3 rounded-xl sm:text-sm text-accent-500"
+                  class="w-full focus:outline-none border py-3 appearance-none h-12 bg-gray-50 block border-gray-200 focus:bg-white focus:border-accent-500 focus:ring-accent-500 placeholder-gray-400 px-3 rounded-xl sm:text-sm text-accent-500"
                   id="last_name"
                   name="last_name"
                   autocomplete="family-name"
@@ -77,13 +77,13 @@
                 >User name or email Adress</label
               >
               <input
-                class="w-full focus:outline-none border py-3 appearance-none bg-slate-50 block border-slate-200 focus:bg-white focus:border-accent-500 focus:ring-accent-500 placeholder-slate-400 px-3 rounded-xl sm:text-sm text-accent-500"
+                class="w-full focus:outline-none border py-3 appearance-none h-12 bg-gray-50 block border-gray-200 focus:bg-white focus:border-accent-500 focus:ring-accent-500 placeholder-gray-400 px-3 rounded-xl sm:text-sm text-accent-500"
                 placeholder="Type here..."
               />
             </div><div class="col-span-full">
               <label class="sr-only" name="company">Password</label>
               <input
-                class="w-full focus:outline-none border py-3 appearance-none bg-slate-50 block border-slate-200 focus:bg-white focus:border-accent-500 focus:ring-accent-500 placeholder-slate-400 px-3 rounded-xl sm:text-sm text-accent-500"
+                class="w-full focus:outline-none border py-3 appearance-none h-12 bg-gray-50 block border-gray-200 focus:bg-white focus:border-accent-500 focus:ring-accent-500 placeholder-gray-400 px-3 rounded-xl sm:text-sm text-accent-500"
                 placeholder="Type password here..."
                 type="password"
               />
@@ -96,7 +96,7 @@
                   type="checkbox"
                 />
                 <label
-                  class="font-medium text-xs block leading-tight ml-2 text-slate-500"
+                  class="font-medium text-xs block leading-tight ml-2 text-gray-500"
                   for="remember-me"
                   >Creating an account means you’re okay with our <a
                     class="text-accent-500 hover:text-accent-400"
@@ -114,7 +114,7 @@
               </div>
             </div><div class="col-span-full">
               <button
-                class="items-center justify-center rounded-xl focus-visible:outline-black focus:outline-none inline-flex bg-black border-2 border-black duration-200 focus-visible:ring-black hover:bg-transparent hover:border-black hover:text-black px-6 py-3 text-center text-white w-full"
+                class="items-center justify-center h-12 rounded-xl focus-visible:outline-black focus:outline-none inline-flex bg-black border-2 border-black duration-200 focus-visible:ring-black hover:bg-transparent hover:border-black hover:text-black px-6 py-3 text-center text-white w-full"
                 type="submit">Create an account</button
               >
             </div><div class="space-y-4">
@@ -123,7 +123,7 @@
                   class="text-accent-500 hover:text-accent-400 ml-3"
                   href="/login">Sign in</a
                 >
-              </p><p class="font-medium text-xs leading-tight text-slate-500">
+              </p><p class="font-medium text-xs leading-tight text-gray-500">
                 This site is protected by reCAPTCHA and the Google Privacy
                 Policy and Terms of Service apply.
               </p>
