--- a/src/components/global/Cta.astro
+++ b/src/components/global/Cta.astro
@@ -19,12 +19,12 @@
         </div>
         <div class="flex justify-center gap-3 mt-10 flex-col sm:flex-row">
           <a
-            class="items-center justify-center font-medium rounded-xl text-black focus-visible:outline-white focus:outline-none inline-flex bg-white border-2 border-white duration-200 focus-visible:ring-black hover:bg-transparent hover:border-white hover:text-white lg:w-auto px-6 py-3 text-center w-full"
+            class="items-center h-12 justify-center font-medium rounded-xl text-black focus-visible:outline-white focus:outline-none inline-flex bg-white border-2 border-white duration-200 focus-visible:ring-black hover:bg-transparent hover:border-white/20 hover:text-white lg:w-auto px-6 py-3 text-center w-full"
             href="https://lexingtonthemes.com/">
             Browse templates
           </a>
           <a
-            class="items-center justify-center font-medium rounded-xl focus-visible:outline-white focus:outline-none inline-flex duration-200 text-white lg:w-auto px-6 py-3 text-center text-white/80 w-full"
+            class="items-center  h-12  justify-center font-medium rounded-xl focus-visible:outline-white focus:outline-none inline-flex duration-200 text-white lg:w-auto px-6 py-3 text-center text-white/80 w-full"
             href="https://lexingtonthemes.com/pricing"
             >Get the bundle for $199</a
           >
