--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -171,7 +171,7 @@
         </a>
         <button
           @click="open = !open"
-          class="inline-flex items-center justify-center p-2 text-slate-400 hover:text-black focus:outline-none focus:text-black lg:hidden">
+          class="inline-flex items-center justify-center p-2 text-gray-400 hover:text-black focus:outline-none focus:text-black lg:hidden">
           <svg
             class="w-6 h-6"
             stroke="currentColor"
@@ -220,7 +220,7 @@
           </a>
           <a
             href="/login"
-            class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-black bg-slate-100 rounded-lg group focus:outline-none focus-visible:outline-2 focus-visible:outline-offset-2 hover:bg-slate-50 active:bg-slate-200 active:text-accent-400 focus-visible:outline-black">
+            class="inline-flex items-center h-8 justify-center px-4 py-2 text-sm font-medium text-black bg-gray-100 rounded-lg group focus:outline-none focus-visible:outline-2 focus-visible:outline-offset-2 hover:bg-gray-50 active:bg-gray-200 active:text-accent-400 focus-visible:outline-black">
             Log in
           </a>
         </div>
