--- a/src/components/global/Testimonial.astro
+++ b/src/components/global/Testimonial.astro
@@ -1,4 +1,4 @@
-<section class="bg-slate-100">
+<section class="bg-gray-100">
   <div
     class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24">
     <div class="max-w-2xl mx-auto md:text-center">
@@ -14,23 +14,23 @@
           <li>
             <figure class="relative h-full p-6 bg-white rounded-3xl">
               <blockquote class="relative">
-                <p class="text-base text-slate-500">
+                <p class="text-base text-gray-500">
                   Snowflake is a cloud data platform that enables data storage,
                   processing, and analytics solutions for businesses and more.
                 </p>
               </blockquote>
               <figcaption
-                class="relative flex items-center justify-between pt-6 mt-6 border-t border-slate-100">
+                class="relative flex items-center justify-between pt-6 mt-6 border-t border-gray-100">
                 <div>
                   <div
                     class="text-lg font-semibold leading-6 text-black font-display">
                     Annur Flint
                   </div>
-                  <div class="mt-1 text-sm text-slate-500">
+                  <div class="mt-1 text-sm text-gray-500">
                     CEO at Flint LLC
                   </div>
                 </div>
-                <div class="overflow-hidden rounded-full bg-slate-50">
+                <div class="overflow-hidden rounded-full bg-gray-50">
                   <img
                     alt=""
                     src="https://images.unsplash.com/flagged/photo-1570612861542-284f4c12e75f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80"
@@ -49,24 +49,24 @@
           <li>
             <figure class="relative h-full p-6 bg-white rounded-3xl">
               <blockquote class="relative">
-                <p class="text-base text-slate-500">
+                <p class="text-base text-gray-500">
                   With the Data Cloud platform, Snowflake manages the
                   complexities of data storage infrastructure, enabling
                   organizations.
                 </p>
               </blockquote>
               <figcaption
-                class="relative flex items-center justify-between pt-6 mt-6 border-t border-slate-100">
+                class="relative flex items-center justify-between pt-6 mt-6 border-t border-gray-100">
                 <div>
                   <div
                     class="text-lg font-semibold leading-6 text-black font-display">
                     Jordan Pettersson
                   </div>
-                  <div class="mt-1 text-sm text-slate-500">
+                  <div class="mt-1 text-sm text-gray-500">
                     Director at Pettersson Industries
                   </div>
                 </div>
-                <div class="overflow-hidden rounded-full bg-slate-50">
+                <div class="overflow-hidden rounded-full bg-gray-50">
                   <img
                     alt=""
                     src="https://images.unsplash.com/photo-1577202214328-c04b77cefb5d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2073&q=80"
@@ -89,23 +89,23 @@
           <li>
             <figure class="relative h-full p-6 bg-white rounded-3xl">
               <blockquote class="relative">
-                <p class="text-base text-slate-500">
+                <p class="text-base text-gray-500">
                   Upswing securities passively index inverse bondholders
                   capitalization financial health Moody's debt managed.
                 </p>
               </blockquote>
               <figcaption
-                class="relative flex items-center justify-between pt-6 mt-6 border-t border-slate-100">
+                class="relative flex items-center justify-between pt-6 mt-6 border-t border-gray-100">
                 <div>
                   <div
                     class="text-lg font-semibold leading-6 text-black font-display">
                     Oliver Benji
                   </div>
-                  <div class="mt-1 text-sm text-slate-500">
+                  <div class="mt-1 text-sm text-gray-500">
                     Founder of Benji and Tom
                   </div>
                 </div>
-                <div class="overflow-hidden rounded-full bg-slate-50">
+                <div class="overflow-hidden rounded-full bg-gray-50">
                   <img
                     alt=""
                     src="https://images.unsplash.com/photo-1624224971170-2f84fed5eb5e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1999&q=80"
@@ -124,22 +124,22 @@
           <li>
             <figure class="relative h-full p-6 bg-white rounded-3xl">
               <blockquote class="relative">
-                <p class="text-base text-slate-500">
+                <p class="text-base text-gray-500">
                   Receive bondholders called capitalization investment grade
                   bonds bills management district stocks. Potential funds
                   consulting.
                 </p>
               </blockquote>
               <figcaption
-                class="relative flex items-center justify-between pt-6 mt-6 border-t border-slate-100">
+                class="relative flex items-center justify-between pt-6 mt-6 border-t border-gray-100">
                 <div>
                   <div
                     class="text-lg font-semibold leading-6 text-black font-display">
                     Messi Lionel
                   </div>
-                  <div class="mt-1 text-sm text-slate-500">COO at Pff Inc</div>
+                  <div class="mt-1 text-sm text-gray-500">COO at Pff Inc</div>
                 </div>
-                <div class="overflow-hidden rounded-full bg-slate-50">
+                <div class="overflow-hidden rounded-full bg-gray-50">
                   <img
                     alt=""
                     src="https://images.unsplash.com/photo-1548142813-c348350df52b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=989&q=80"
@@ -162,23 +162,23 @@
           <li>
             <figure class="relative h-full p-6 bg-white rounded-3xl">
               <blockquote class="relative">
-                <p class="text-base text-slate-500">
+                <p class="text-base text-gray-500">
                   Debt bills lucrative capitalization municipal bonds government
                   401k bear bull credit corporate bonds called NYSE finance.
                 </p>
               </blockquote>
               <figcaption
-                class="relative flex items-center justify-between pt-6 mt-6 border-t border-slate-100">
+                class="relative flex items-center justify-between pt-6 mt-6 border-t border-gray-100">
                 <div>
                   <div
                     class="text-lg font-semibold leading-6 text-black font-display">
                     Melon Tusk
                   </div>
-                  <div class="mt-1 text-sm text-slate-500">
+                  <div class="mt-1 text-sm text-gray-500">
                     Founder of Fesla
                   </div>
                 </div>
-                <div class="overflow-hidden rounded-full bg-slate-50">
+                <div class="overflow-hidden rounded-full bg-gray-50">
                   <img
                     alt=""
                     src="https://images.unsplash.com/photo-1602434228300-a645bce6891b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1639&q=80"
@@ -197,23 +197,23 @@
           <li>
             <figure class="relative h-full p-6 bg-white rounded-3xl">
               <blockquote class="relative">
-                <p class="text-base text-slate-500">
+                <p class="text-base text-gray-500">
                   Managed prices bondholders federal risk NASDAQ hedge fund
                   expenses municipal bonds management, in the morning.
                 </p>
               </blockquote>
               <figcaption
-                class="relative flex items-center justify-between pt-6 mt-6 border-t border-slate-100">
+                class="relative flex items-center justify-between pt-6 mt-6 border-t border-gray-100">
                 <div>
                   <div
                     class="text-lg font-semibold leading-6 text-black font-display">
                     Målgan
                   </div>
-                  <div class="mt-1 text-sm text-slate-500">
+                  <div class="mt-1 text-sm text-gray-500">
                     Director at Målagan AB
                   </div>
                 </div>
-                <div class="overflow-hidden rounded-full bg-slate-50">
+                <div class="overflow-hidden rounded-full bg-gray-50">
                   <img
                     alt=""
                     src="https://images.unsplash.com/flagged/photo-1570612861542-284f4c12e75f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80"
