--- a/src/components/infopages/Faq.astro
+++ b/src/components/infopages/Faq.astro
@@ -7,7 +7,7 @@
           class="text-black font-extrabold lg:text-5xl text-4xl tracking-tight">
           Frequent questions and answers
         </p>
-        <p class="text-slate-500 lg:text-xl max-w-2xl mt-4 mx-auto text-base">
+        <p class="text-gray-500 lg:text-xl max-w-2xl mt-4 mx-auto text-base">
           Because we wonder all day around
         </p>
       </div>
@@ -21,7 +21,7 @@
             </span>
           </div>
           <div class="lg:col-span-2">
-            <p class="text-slate-500 text-sm">
+            <p class="text-gray-500 text-sm">
               If we got in touch with you about unauthorized charges and you
               think we have made a mistake, we will gladly look into this for
               you. We will have sent you a form that we need you to fill out in
@@ -41,7 +41,7 @@
             </span>
           </div>
           <div class="space-y-4 lg:col-span-2">
-            <p class="text-slate-500 text-sm">
+            <p class="text-gray-500 text-sm">
               Lexingtøn Themes is legally required to complete what is called a
               KYC (Know Your Customer) Survey for every user that signs up,
               which includes completing identity verification for the person who
@@ -53,7 +53,7 @@
               verify our users' identities automatically, but once in a while we
               are unable to and have to reach out for more information.
             </p>
-            <p class="text-slate-500 text-sm">
+            <p class="text-gray-500 text-sm">
               If you have not yet done so, visit the Verifications section of
               your Dashboard to upload your photo ID in your dashboard.
             </p>
@@ -67,7 +67,7 @@
             </span>
           </div>
           <div class="lg:col-span-2">
-            <p class="text-slate-500 text-sm">
+            <p class="text-gray-500 text-sm">
               Reserves are utilized to keep processing volume available within
               your Lexingtøn Themes account to fund refunds or chargebacks.
               There are several possible reasons a reserve may be placed at
@@ -90,7 +90,7 @@
             </span>
           </div>
           <div class="lg:col-span-2">
-            <p class="text-slate-500 text-sm">
+            <p class="text-gray-500 text-sm">
               We know how important it is to be able to accept transactions and
               payouts quickly in order for a business to continue running
               smoothly. Lexingtøn Themes is currently reviewing your submitted
