--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -23,42 +23,42 @@
           A starter template built with Astro and Tailwind CSS for your next
           project
         </p>
-        <p class="text-slate-500 lg:text-xl max-w-2xl mt-4 mx-auto text-base">
+        <p class="text-gray-500 lg:text-xl max-w-2xl mt-4 mx-auto text-base">
           Putting together a directory website was a challenge. Superstash lets
           you focus on the content and makes the entire process effortless.
         </p>
       </div>
       <div class="flex justify-center gap-3 mt-10 flex-col sm:flex-row">
         <a
-          class="items-center justify-center font-medium rounded-xl focus-visible:outline-black focus:outline-none inline-flex duration-200 text-black lg:w-auto px-6 py-3 text-center text-black/80 w-full border"
+          class="items-center justify-center h-12 font-medium rounded-xl focus-visible:outline-black focus:outline-none inline-flex duration-200 text-black lg:w-auto px-6 py-3 text-center text-black/80 w-full border"
           href="https://github.com/michael-andreuzza/astrosaas">GitHub</a
         >
         <a
-          class="items-center justify-center font-medium rounded-xl focus-visible:outline-black focus:outline-none inline-flex bg-black border-2 border-black duration-200 focus-visible:ring-black hover:bg-transparent hover:border-black hover:text-black lg:w-auto px-6 py-3 text-center text-white w-full"
+          class="items-center justify-center h-12 font-medium rounded-xl focus-visible:outline-black focus:outline-none inline-flex bg-black border-2 border-black duration-200 focus-visible:ring-black hover:bg-transparent hover:border-black hover:text-black lg:w-auto px-6 py-3 text-center text-white w-full"
           href="https://lexingtonthemes.com"
           >Lexington Themes &nbsp; &rarr;
         </a>
       </div>
       <dl
         class="lg:gap-x-8 lg:grid-cols-3 max-w-4xl mt-8 mx-auto sm:gap-x-6 sm:gap-y-12 sm:grid sm:grid-cols-2 sm:space-y-0 space-y-6 text-center text-sm items-start">
-        <div class="text-slate-500">
-          <strong class="text-slate-700"
+        <div class="text-gray-500">
+          <strong class="text-gray-700"
             >Astro, Tailwind CSS and Alpine.js</strong
           > ━ This are the popular technologies behind Astrosaas.
         </div>
-        <div class="text-slate-500">
-          <strong class="text-slate-700">Includes 6 pages</strong> ━ You will find
+        <div class="text-gray-500">
+          <strong class="text-gray-700">Includes 6 pages</strong> ━ You will find
           this landing, faq, terms,privacy,sign up and sign in pages.
         </div>
-        <div class="text-slate-500">
-          <strong class="text-slate-700">Different section</strong> ━ The starter
+        <div class="text-gray-500">
+          <strong class="text-gray-700">Different section</strong> ━ The starter
           includes different feature sections, a pricing table, testmionial, CTA
           and full forms. more.
         </div>
       </dl>
     </div>
     <div class="relative w-full mx-auto max-w-7xl items-center py-12 pb-12">
-      <div class="bg-slate-100 p-8 rounded-3xl" style="">
+      <div class="bg-gray-100 p-8 rounded-3xl" style="">
         <img
           alt=""
           class="relative w-full border lg:rounded-2xl object-cover rounded shadow-2xl"
@@ -67,23 +67,23 @@
       </div>
     </div>
     <div class="grid grid-cols-2 gap-0.5 lg:mt-8 md:grid-cols-6 mt-6">
-      <div class="flex justify-center col-span-1 px-8">
-        <img alt="logo" class="max-h-12 " src="/Figma.svg" />
+      <div class="flex justify-center col-span-1 ">
+        <img alt="logo" class="h-8" src="/Figma.svg" />
       </div>
-      <div class="flex justify-center col-span-1 px-8">
-        <img alt="logo" class="max-h-12 " src="/Canva.svg" />
+      <div class="flex justify-center col-span-1 ">
+        <img alt="logo" class="h-8" src="/Canva.svg" />
       </div>
-      <div class="flex justify-center col-span-1 px-8">
-        <img alt="logo" class="max-h-12 " src="/Stripe.svg" />
+      <div class="flex justify-center col-span-1 ">
+        <img alt="logo" class="h-8" src="/Stripe.svg" />
       </div>
-      <div class="flex justify-center col-span-1 px-8">
-        <img alt="logo" class="max-h-12 " src="/Gitlab.svg" />
+      <div class="flex justify-center col-span-1 ">
+        <img alt="logo" class="h-8" src="/Gitlab.svg" />
       </div>
-      <div class="flex justify-center col-span-1 px-8">
-        <img alt="logo" class="max-h-12 " src="/Linear.svg" />
+      <div class="flex justify-center col-span-1 ">
+        <img alt="logo" class="h-8" src="/Linear.svg" />
       </div>
-      <div class="flex justify-center col-span-1 px-8">
-        <img alt="logo" class="max-h-12 " src="/Gumroad.svg" />
+      <div class="flex justify-center col-span-1 ">
+        <img alt="logo" class="h-8" src="/Gumroad.svg" />
       </div>
     </div>
   </div>
