--- a/src/components/landing/Pricing.astro
+++ b/src/components/landing/Pricing.astro
@@ -11,10 +11,10 @@
   </div>
   <div class="items-center px-8 lg:pt-12 pb-24 mx-auto max-w-7xl lg:px-16">
     <div
-      class="grid max-w-2xl grid-cols-1 py-4 -mx-4 sm:grid-cols-2 gap-y-10 sm:mx-auto lg:max-w-none lg:grid-cols-4 xl:gap-x-4 lg:bg-slate-50 lg:border border-slate-500/10 lg:rounded-3xl">
+      class="grid max-w-2xl grid-cols-1 py-4 -mx-4 sm:grid-cols-2 gap-y-10 sm:mx-auto lg:max-w-none lg:grid-cols-4 xl:gap-x-4 lg:bg-gray-50 lg:border border-gray-500/10 lg:rounded-3xl">
       <section class="flex flex-col px-6 rounded-3xl lg:py-8">
         <h3 class="mt-5 text-lg text-black font-display">Greedy</h3>
-        <p class="mt-2 text-sm text-slate-500">
+        <p class="mt-2 text-sm text-gray-500">
           Amazing for those attached to money with glue
         </p>
         <p
@@ -23,7 +23,7 @@
         </p>
         <ul
           role="list"
-          class="flex flex-col order-last mt-10 text-sm text-slate-600 gap-y-3">
+          class="flex flex-col order-last mt-10 text-sm text-gray-600 gap-y-3">
           <li class="flex items-center">
             <ion-icon
               class="w-4 h-4 md hydrated"
@@ -58,14 +58,14 @@
           </li>
         </ul>
         <a
-          class="inline-flex items-center justify-center w-full px-6 py-3 mt-8 text-center text-black transition duration-200 ease-in-out transform border-2 border-black hover:bg-transparent hover:border-black/50 rounded-xl focus:outline-none"
+          class="inline-flex items-center justify-center w-full px-6 py-3 h-12 mt-8 text-center text-black transition duration-200 ease-in-out transform bg-white border hover:bg-gray-200 hover:border-gray-200 rounded-xl focus:outline-none"
           aria-label="Wannabe tier"
           href="/register">Get started</a
         >
       </section>
       <section class="flex flex-col px-6 rounded-3xl lg:py-8">
         <h3 class="mt-5 text-lg text-black font-display">Wannabe</h3>
-        <p class="mt-2 text-sm text-slate-500">
+        <p class="mt-2 text-sm text-gray-500">
           Good for those trying to get there, but are too far from it.
         </p>
         <p
@@ -74,7 +74,7 @@
         </p>
         <ul
           role="list"
-          class="flex flex-col order-last mt-10 text-sm text-slate-600 gap-y-3">
+          class="flex flex-col order-last mt-10 text-sm text-gray-600 gap-y-3">
           <li class="flex items-center">
             <ion-icon
               class="w-4 h-4 md hydrated"
@@ -117,7 +117,7 @@
           </li>
         </ul>
         <a
-          class="inline-flex items-center justify-center w-full px-6 py-3 mt-8 text-center text-black transition duration-200 ease-in-out transform border-2 border-black hover:bg-transparent hover:border-black/50 rounded-xl focus:outline-none"
+          class="inline-flex items-center justify-center w-full px-6 py-3 h-12 mt-8 text-center text-black transition duration-200 ease-in-out transform bg-white border hover:bg-gray-200 hover:border-gray-200 rounded-xl focus:outline-none"
           aria-label="Wannabe tier"
           href="/register">Get started</a
         >
@@ -193,14 +193,14 @@
           </li>
         </ul>
         <a
-          class="inline-flex items-center justify-center w-full px-6 py-3 mt-8 text-center text-black transition duration-200 ease-in-out transform bg-white border-2 border-white hover:bg-transparent hover:border-white rounded-xl hover:text-white focus:outline-none"
+          class="inline-flex items-center justify-center w-full px-6 py-3 h-12 mt-8 text-center text-black transition duration-200 ease-in-out transform bg-white border-2 border-white hover:bg-transparent hover:border-white rounded-xl hover:text-white focus:outline-none"
           aria-label="Indie hacker tier"
           href="/register">Get started</a
         >
       </section>
       <section class="flex flex-col px-6 rounded-3xl lg:py-8">
         <h3 class="mt-5 text-lg text-black font-display">Big fish</h3>
-        <p class="mt-2 text-sm text-slate-500">
+        <p class="mt-2 text-sm text-gray-500">
           For even the biggest enterprise companies.
         </p>
         <p
@@ -209,7 +209,7 @@
         </p>
         <ul
           role="list"
-          class="flex flex-col order-last mt-10 text-sm text-slate-600 gap-y-3">
+          class="flex flex-col order-last mt-10 text-sm text-gray-600 gap-y-3">
           <li class="flex items-center">
             <ion-icon
               class="w-4 h-4 md hydrated"
@@ -252,7 +252,7 @@
           </li>
         </ul>
         <a
-          class="inline-flex items-center justify-center w-full px-6 py-3 mt-8 text-center text-black transition duration-200 ease-in-out transform border-2 border-black hover:bg-transparent hover:border-black/50 rounded-xl focus:outline-none"
+          class="inline-flex items-center justify-center w-full px-6 py-3 h-12 mt-8 text-center text-black transition duration-200 ease-in-out transform bg-white border hover:bg-gray-200 hover:border-gray-200 rounded-xl focus:outline-none"
           aria-label="Big fish tier"
           href="/register">Get started</a
         >
