--- a/src/components/landing/SectionOne.astro
+++ b/src/components/landing/SectionOne.astro
@@ -9,7 +9,7 @@
             >heading than the others
           </span>
         </p><p
-          class="mt-4 text-lg max-w-xl mx-auto tracking-tight text-slate-500">
+          class="mt-4 text-lg max-w-xl mx-auto tracking-tight text-gray-500">
           If you could kick the person in the pants responsible for most of your
           trouble, you wouldn't sit for a month
         </p>
@@ -23,7 +23,7 @@
             <div>
               <div>
                 <div
-                  class="items-center justify-center text-accent-500 bg-slate-100 rounded-xl flex h-10 w-10 lg:mx-auto">
+                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto">
                   <ion-icon
                     aria-label="scan outline"
                     class="hydrated md h-4 w-4"
@@ -34,14 +34,14 @@
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight">
                   Built with Astro.js.
                 </p>
-              </div><div class="mt-4 text-slate-500 text-sm">
+              </div><div class="mt-4 text-gray-500 text-sm">
                 Astro is an all-in-one web framework for building fast,
                 content-focused websites.
               </div>
             </div><div>
               <div>
                 <div
-                  class="items-center justify-center text-accent-500 bg-slate-100 rounded-xl flex h-10 w-10 lg:mx-auto">
+                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto">
                   <ion-icon
                     aria-label="scan outline"
                     class="hydrated md h-4 w-4"
@@ -52,7 +52,7 @@
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight">
                   Styled with Tailwind CSS.
                 </p>
-              </div><div class="mt-4 text-slate-500 text-sm">
+              </div><div class="mt-4 text-gray-500 text-sm">
                 Tailwind CSS generates styles by searching for class names in
                 HTML, JavaScript, and templates, and then outputs them in a
                 single CSS file.
@@ -60,7 +60,7 @@
             </div><div>
               <div>
                 <div
-                  class="items-center justify-center text-accent-500 bg-slate-100 rounded-xl flex h-10 w-10 lg:mx-auto">
+                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto">
                   <ion-icon
                     aria-label="scan outline"
                     class="hydrated md h-4 w-4"
@@ -71,14 +71,14 @@
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight">
                   Relived with Alpine.js
                 </p>
-              </div><div class="mt-4 text-slate-500 text-sm">
+              </div><div class="mt-4 text-gray-500 text-sm">
                 Alpine is a rugged, minimal tool for for adding behavior to your
                 markup, similar to jQuery but for the modern web.
               </div>
             </div><div>
               <div>
                 <div
-                  class="items-center justify-center text-accent-500 bg-slate-100 rounded-xl flex h-10 w-10 lg:mx-auto">
+                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto">
                   <ion-icon
                     aria-label="scan outline"
                     class="hydrated md h-4 w-4"
@@ -89,7 +89,7 @@
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight">
                   Keyboard accessible.
                 </p>
-              </div><div class="mt-4 text-slate-500 text-sm">
+              </div><div class="mt-4 text-gray-500 text-sm">
                 Everything I build is keyboard accessible, and I meticulously
                 write the markup to deliver the best screenreader experience I
                 can provide.
@@ -97,7 +97,7 @@
             </div><div>
               <div>
                 <div
-                  class="items-center justify-center text-accent-500 bg-slate-100 rounded-xl flex h-10 w-10 lg:mx-auto">
+                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto">
                   <ion-icon
                     aria-label="scan outline"
                     class="hydrated md h-4 w-4"
@@ -108,14 +108,14 @@
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight">
                   Production-ready
                 </p>
-              </div><div class="mt-4 text-slate-500 text-sm">
+              </div><div class="mt-4 text-gray-500 text-sm">
                 I tested the template in the latest versions of all browsers to
                 handle lots of edge-cases you might encounter.
               </div>
             </div><div>
               <div>
                 <div
-                  class="items-center justify-center text-accent-500 bg-slate-100 rounded-xl flex h-10 w-10 lg:mx-auto">
+                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto">
                   <ion-icon
                     aria-label="scan outline"
                     class="hydrated md h-4 w-4"
@@ -126,7 +126,7 @@
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight">
                   Simple deploys
                 </p>
-              </div><div class="mt-4 text-slate-500 text-sm">
+              </div><div class="mt-4 text-gray-500 text-sm">
                 The template is ready for production and can be deployed
                 anywhere static websites can, such as Vercel, Netlify, or GitHub
                 Pages, and more.
