--- a/src/components/landing/SectionTwo.astro
+++ b/src/components/landing/SectionTwo.astro
@@ -9,7 +9,7 @@
             >heading than the others
           </span>
         </p><p
-          class="mt-4 text-lg max-w-xl tracking-tight text-slate-500 mx-auto">
+          class="mt-4 text-lg max-w-xl tracking-tight text-gray-500 mx-auto">
           If you could kick the person in the pants responsible for most of your
           trouble, you wouldn't sit for a month
         </p>
@@ -21,7 +21,7 @@
         <div>
           <div class="gap-3 lg:inline-flex lg:items-center">
             <div
-              class="items-center justify-center text-accent-500 bg-slate-100 rounded-xl flex h-10 w-10">
+              class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10">
               <ion-icon
                 aria-label="scan outline"
                 class="hydrated md h-5 w-5"
@@ -32,14 +32,14 @@
               class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
               Developer experience
             </p>
-          </div><p class="text-slate-500 text-sm mt-4">
+          </div><p class="text-gray-500 text-sm mt-4">
             Everything I build is keyboard accessible, and I meticulously write
             the markup to deliver the best screenreader experience.
           </p>
         </div><div>
           <div class="gap-3 lg:inline-flex lg:items-center">
             <div
-              class="items-center justify-center text-accent-500 bg-slate-100 rounded-xl flex h-10 w-10">
+              class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10">
               <ion-icon
                 aria-label="scan outline"
                 class="hydrated md h-5 w-5"
@@ -50,14 +50,14 @@
               class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
               Designers go-to app
             </p>
-          </div><p class="text-slate-500 text-sm mt-4">
+          </div><p class="text-gray-500 text-sm mt-4">
             I tested the template in the latest versions of all browsers to
             handle lots of edge-cases you might encounter.
           </p>
         </div><div>
           <div class="gap-3 lg:inline-flex lg:items-center">
             <div
-              class="items-center justify-center text-accent-500 bg-slate-100 rounded-xl flex h-10 w-10">
+              class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10">
               <ion-icon
                 aria-label="scan outline"
                 class="hydrated md h-5 w-5"
@@ -68,7 +68,7 @@
               class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
               Easy onboarding
             </p>
-          </div><p class="text-slate-500 text-sm mt-4">
+          </div><p class="text-gray-500 text-sm mt-4">
             The template is ready for production and can be deployed anywhere
             static websites can, such as Vercel, Netlify, or GitHub Pages,..
           </p>
