--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -1,137 +1,79 @@
-<footer aria-labelledby="footer-heading" class="bg-black">
-  <h2 id="footer-heading " class="sr-only">Footer</h2>
-  <div
-    class="items-center px-8 mx-auto py-12 gh:py-24 md:px-12 lg:px-16 xl:px-36 2xl:max-w-7xl">
-    <div class="xl:grid xl:grid-cols-3 xl:gap-8">
-      <div class="text-white xl:col-span-3">
-        <span class="text-lg font-semibold lg:text-2xl italic">Astro SaaS</span>
-        <p class="lg:w-1/4 mt-2 text-sm text-slate-400">
-          <span class="mt-6 font-normal">
-            Digital resources for digital designers and web developers by
-            Michael Andreuzza
-          </span>
-        </p>
-      </div>
-      <div class="grid grid-cols-2 gap-8 mt-12 lg:mt-24 xl:col-span-3">
-        <div class="md:grid md:grid-cols-2 md:gap-8">
-          <div>
-            <h3 class="text-xl text-white">All pages</h3>
-            <ul role="list" class="mt-4 space-y-2">
-              <li>
-                <a href="/h" class="text-sm text-slate-400 hover:text-white">
-                  Home
-                </a>
-              </li>
-
-              <li>
-                <a href="/faq" class="text-sm text-slate-400 hover:text-white">
-                  FAQ
-                </a>
-              </li>
-              <li>
-                <a
-                  href="/terms"
-                  class="text-sm text-slate-400 hover:text-white">
-                  Terms
-                </a>
-              </li>
-              <li>
-                <a
-                  href="/privacy"
-                  class="text-sm text-slate-400 hover:text-white">
-                  Privacy
-                </a>
-              </li>
-              <li>
-                <a
-                  href="/signup"
-                  class="text-sm text-slate-400 hover:text-white">
-                  Sign up
-                </a>
-              </li>
-              <li>
-                <a
-                  href="/signup"
-                  class="text-sm text-slate-400 hover:text-white">
-                  Sign In
-                </a>
-              </li>
-            </ul>
-          </div>
-          <div class="mt-12 md:mt-0">
-            <h3 class="text-xl text-white">Resources</h3>
-            <ul role="list" class="mt-4 space-y-2">
-              <li>
-                <a
-                  href="https://github.com/michael-andreuzza/astrosaas"
-                  class="text-sm text-slate-400 hover:text-white">
-                  GitHub repo
-                </a>
-              </li>
-            </ul>
-          </div>
+<footer>
+  <div class="items-center px-8 mx-auto py-12 gh:py-24 md:px-12 lg:px-16 xl:px-36 2xl:max-w-7xl ">
+    <div class="grid grid-cols-2 gap-8 border-y py-12   xl:col-span-3">
+      <div class="md:grid md:grid-cols-2 md:gap-8">
+        <div>
+          <h3 class="text-base text-black font-medium tracking-tight">All pages</h3>
+          <ul role="list" class="mt-4 space-y-1">
+            <li>
+              <a href="/h" class="text-xs text-gray-400 hover:text-black">
+                Home
+              </a>
+            </li>
+            <li>
+              <a href="/faq" class="text-xs text-gray-400 hover:text-black">
+                FAQ
+              </a>
+            </li>
+            <li>
+              <a href="/terms" class="text-xs text-gray-400 hover:text-black">
+                Terms
+              </a>
+            </li>
+            <li>
+              <a href="/privacy" class="text-xs text-gray-400 hover:text-black">
+                Privacy
+              </a>
+            </li>
+            <li>
+              <a href="/signup" class="text-xs text-gray-400 hover:text-black">
+                Sign up
+              </a>
+            </li>
+            <li>
+              <a href="/signup" class="text-xs text-gray-400 hover:text-black">
+                Sign In
+              </a>
+            </li>
+          </ul>
         </div>
-        <div class="md:grid md:grid-cols-2 md:gap-8">
-          <div>
-            <h3 class="text-xl text-white">More themes</h3>
-            <ul role="list" class="mt-4 space-y-2">
-              <li>
-                <a
-                  href="https://lexingtonthemes.com/"
-                  class="text-sm text-slate-400 hover:text-white">
-                  Lexington Themes
-                </a>
-              </li>
-            </ul>
-          </div>
-          <div class="mt-12 md:mt-0">
-            <h3 class="text-xl text-white">Socials</h3>
-            <ul role="list" class="mt-4 space-y-2">
-              <li>
-                <a
-                  href="https://x.com/lexingtonthemes"
-                  class="text-sm text-slate-400 hover:text-white">
-                  @lexingtonthemes
-                </a>
-              </li>
-              <li>
-                <a
-                  href="https://x.com/Mike_Andreuzza"
-                  class="text-sm text-slate-400 hover:text-white">
-                  @Mike_Andreuzza
-                </a>
-              </li>
-              <li>
-                <a
-                  href="https://michaelandreuzza.com"
-                  class="text-sm text-slate-400 hover:text-white">
-                  MichaelAndreuzza
-                </a>
-              </li>
-            </ul>
-          </div>
+        <div class="mt-12 md:mt-0">
+          <h3 class="text-base text-black font-medium tracking-tight">Resources</h3>
+          <ul role="list" class="mt-4 space-y-1">
+            <li>
+              <a href="https://github.com/michael-andreuzza/astrosaas" class="text-xs text-gray-400 hover:text-black">
+                GitHub repo
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
-    </div>
-  </div>
-</footer>
-<footer class="border-t border-white/5 bg-black">
-  <div
-    class="items-center px-8 py-6 mx-auto md:px-12 lg:px-16 xl:px-36 2xl:max-w-7xl">
-    <div class="md:flex md:items-center md:justify-between">
-      <div class="flex justify-center space-x-6 md:order-2">
-        <a
-          href="https://x.com/mike_andreuzza"
-          class="p-3 text-sm text-slate-400 transition duration-500 ease-in-out transform hover:text-white">
-          <span class=""> @Mike_Andreuzza</span>
-        </a>
-      </div>
-      <div class="mt-8 md:mt-0 md:order-1">
-        <p class="text-center">
-          <span class="mx-auto mt-2 text-sm text-slate-400">
-            By Michael Anddeuzza
-          </span>
-        </p>
+      <div class="md:grid md:grid-cols-2 md:gap-8">
+        <div>
+          <h3 class="text-base text-black font-medium tracking-tight">More themes</h3>
+          <ul role="list" class="mt-4 space-y-1">
+            <li>
+              <a href="https://lexingtonthemes.com/" class="text-xs text-gray-400 hover:text-black">
+                Lexington Themes
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="mt-12 md:mt-0">
+          <h3 class="text-base text-black font-medium tracking-tight">Socials</h3>
+          <ul role="list" class="mt-4 space-y-1">
+            <li>
+              <a href="https://x.com/lexingtonthemes" class="text-xs text-gray-400 hover:text-black">
+                @lexingtonthemes
+              </a>
+            </li>
+            <li>
+              <a href="https://x.com/Mike_Andreuzza" class="text-xs text-gray-400 hover:text-black">
+                @Mike_Andreuzza
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
