--- a/src/components/infopages/Privacy.astro
+++ b/src/components/infopages/Privacy.astro
@@ -6,14 +6,14 @@
         <h1 class="font-extrabold text-5xl text-black font-display">
           Privacy policy
         </h1>
-        <p class="mt-4 text-base lea ding-7 text-slate-500">
+        <p class="mt-4 text-base lea ding-7 text-gray-500">
           Last updated on January 01, 2023
         </p>
       </div>
     </div>
     <div>
       <div
-        class="mx-auto max-w-[40rem] prose-base prose text-slate-500 prose-h3:text-black prose-a:font-semibold prose-a:text-accent-300 hover:prose-a:text-black">
+        class="mx-auto max-w-[40rem] prose-base prose text-gray-500 prose-h3:text-black prose-a:font-semibold prose-a:text-accent-300 hover:prose-a:text-black">
         <p>
           This privacy policy sets out how Unwrapped AB collects, processes and
           uses your Personal Information through your use of our Services.
